@@ -69,21 +69,3 @@ Description: digital photo organizer - common files
  to manage a lot of image formats such as JPEG, PNG, BMP, TIFF and Raw CR2.
  .
  This package provides image files and documentation for Shotwell.
-
-Package: shotwell-dbg
-Priority: extra
-Section: debug
-Architecture: linux-any
-Depends: ${misc:Depends},
-         shotwell (= ${binary:Version})
-Description: digital photo organizer - debugging symbols
- Shotwell is a digital photo organizer designed for the GNOME desktop
- environment. It allows you to import photos, pictures, images and videos
- from disk or camera. Shotwell can organize them in collections and in other
- various ways. The viewer shows them in full-window or fullscreen mode and
- presents them as galleries or slideshows. The integrated editor can rotate,
- flip, crop and tag the photos, adjust the colors und remove red eyes. Export
- is possible to facebook, Flickr or Youtube to share with others. It is able
- to manage a lot of image formats such as JPEG, PNG, BMP, TIFF and Raw CR2.
- .
- This package contains the debugging symbols for Shotwell.
